update margin teasers

--- a/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
@@ -219,7 +219,7 @@ nav.affix {top:0px;z-index:20;}
 .authors-detail .origin {font-weight:700;}
 .default .teaser .title {border-bottom:none;}
 .default img.teaser_icon {border-radius: 50%;border:1px solid #ccc;}
-.default .teaser {border-bottom:1px solid #ccc;padding:10px;margin:0 0 20px;overflow: auto;}
+.default .teaser {border-bottom:1px solid #ccc;padding:10px 0;margin:0 0 20px;overflow: auto;}
 .default .teaser .teaser_icon_container {background:transparent;padding:0 0 0 50px;margin:0;margin-top:-20px;float:right;}
 .detail .categories .btn {text-transform:uppercase;font-size:12px;}
 .detail .categories .btn span {padding-right:10px;}
