--- a/cyclope/apps/articles/templates/articles/article_labeled_icon.html
+++ b/cyclope/apps/articles/templates/articles/article_labeled_icon.html
@@ -1,7 +1,7 @@
 {% load i18n fb_versions cyclope_utils %}
 
 	{% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
-  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+  <div class="teaser_icon {% if region_name %}{% inline_content_classes %}{% endif%}">
 		<div class="thumbnail">
 			<a href="{% url article-detail article.slug %}">
 				{% if article.get_picture %}
@@ -12,7 +12,7 @@
 				{% endif %}
 			</a>
 			<div class="caption">
-				<h4><a href="{% url article-detail article.slug %}">{{ article.name|truncatechars:40 }}</a></h4>
+				<h4 class="title"><a href="{% url article-detail article.slug %}">{{ article.name|truncatechars:40 }}</a></h4>
 			</div>
 		</div>
 	</div>
