optimize html and redefined the simplified views

--- a/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
@@ -249,14 +249,15 @@ span.category_title a {color:#000;}
 #right .icon_list_container .teaser_icon  {margin:0 0 20px;height:40px;}
 #right .text a {font-size:14px;padding:0 0 5px;border-bottom:1px dotted #999;display:block;}
 
-.blog .teaser_text_container {display:table-cell;float:right;width:82%;}
-.blog .teaser_icon_container {display:table-cell;float:left;width:17%;}
-.blog .teaser {margin:0 0 20px;padding:10px 0;border-bottom:1px dotted #999;}
-.blog .teaser h2.title {margin-top:0;font-weight:500}
-.blog .teaser h4.author {margin:0;padding:0;}
-.blog .teaser .author-container  {margin:0 0 10px;}
-.blog .teaser_more {margin:5px 0 10px;}
-.blog .teaser .pretitle {text-transform:uppercase;}
+.teaser_text_container {display:table-cell;float:right;width:82%;}
+.teaser_text_container_simplified {display:table-cell;float:right;width:100%;}
+.teaser_icon_container {display:table-cell;float:left;width:17%;}
+.teaser {margin:0 0 20px;padding:10px 0;border-bottom:1px dotted #999;}
+.teaser h2.title {margin-top:0;font-weight:500}
+.teaser h4.author {margin:0;padding:0;}
+.teaser .author-container  {margin:0 0 10px;}
+.teaser_more {margin:5px 0 10px;}
+.teaser .pretitle {text-transform:uppercase;}
 
 .category_description .summary {background:#f5f5f5;padding:10px;font-size:18px;margin:0 0 20px;}
 
