--- a/cyclope/templates/admin/cyclope/layout/change_form.html
+++ b/cyclope/templates/admin/cyclope/layout/change_form.html
@@ -8,7 +8,7 @@
 {% regroup original.regionview_set.all|dictsort:"region" by region as region_list %}
 
 <ul id="regions_tree" style="display:none;">
-    <img class="img_layout" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/layout/{{original.image_path}}">
+    <img class="img_layout" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/layouts/{{original.image_path}}">
 	<div class="regions_layout">
 	{% for region in region_list %}
 		<li>{% trans region.grouper|capfirst %}
