layout regions order

--- a/cyclope/templates/admin/cyclope/layout/change_form.html
+++ b/cyclope/templates/admin/cyclope/layout/change_form.html
@@ -12,7 +12,7 @@
     <div class="regions_layout">
         <ul>
             {% for name, region in layout_regions %}
-                <li>{{region}}</li>
+                <li><h3><a href="#">{{region.name}}</a></h3></li>
             {% endfor %}
         </ul>
         <ul>
