--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
@@ -96,21 +96,7 @@
 
         <div class="row">{% block page_content %} {% endblock %}</div>
 
-        <hr>
-
-        <footer>
-            {% block page_footer %}
-                <div class="footer">
-                    {% region 'footer' %}
-                    <span id="creativecommons">Los contenidos de este sitio web están bajo una
-                    <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.es_CO">
-                    Licencia Creative Commons BY-NC-ND
-                    </a></span>.<br/>
-                    <span id="codigo_sur">Tecnología: <a href="http://cyclope.codigosur.org">CyclopeCMS</a>. Desarrollo: <a href="http://www.codigosur.org">CódigoSur</a>.
-                    </span><br/>
-                </div><!-- /end mask -->
-            {% endblock %}
-        </footer>
+	{% include "cyclope/themes/cyclope-bootstrap/footer.html" %}
 
     </div><!--/.container-->
 
