layouts bootstraped laultimachupádelmate

--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/layout_one_column.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/layout_one_column.html
@@ -2,7 +2,7 @@
 
 {% load i18n layout%}
 {% block title %}{%if title %}{{title}} | {%endif%}{{ CYCLOPE_SITE_SETTINGS.global_title }}{%endblock%}
-{% block body_class %}default{% endblock %}
+{% block body_class %}one_column{% endblock %}
 
 {% block page_content %}
     <div class="col-xs-12">
