--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/layout_two_columns_left.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/layout_two_columns_left.html
@@ -2,17 +2,14 @@
 
 {% load i18n layout%}
 {% block title %}{%if title %}{{title}} | {%endif%}{{ CYCLOPE_SITE_SETTINGS.global_title }}{%endblock%}
-{% block body_class %}default{% endblock %}
-
-
+{% block body_class %}two_columns_left{% endblock %}
 
 {% block page_content %}
-{# <div class="">{% region 'left' %}</div> #}
+    <div class="col-xs-12 col-sm-3">{% region 'left' %}</div>
     <div class="col-xs-12 col-sm-9">
         <div class="row">{% region 'top' %}</div>
         <div class="row">{% block content %}{% endblock %}</div>
         <div class="row">{% region 'bottom' %}</div>
     </div>
-    <div class="col-xs-12 col-sm-3">{% region 'right'%}</div>
 {% endblock %}
 
