--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/layout_two_columns_right.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/layout_two_columns_right.html
@@ -2,12 +2,9 @@
 
 {% load i18n layout%}
 {% block title %}{%if title %}{{title}} | {%endif%}{{ CYCLOPE_SITE_SETTINGS.global_title }}{%endblock%}
-{% block body_class %}default{% endblock %}
-
-
+{% block body_class %}two_columns_right{% endblock %}
 
 {% block page_content %}
-{# <div class="">{% region 'left' %}</div> #}
     <div class="col-xs-12 col-sm-9">
         <div class="row">{% region 'top' %}</div>
         <div class="row">{% block content %}{% endblock %}</div>
