--- a/cyclope/templates/admin/cyclope/layout/change_form.html
+++ b/cyclope/templates/admin/cyclope/layout/change_form.html
@@ -14,18 +14,27 @@
     <div class="regions_layout">
         <ul>
             {% for name, region in layout_regions %}
-                <li><h3><a href="#">{{region.name}}</a></h3></li>
-                {% for o_region in region_list %}
-                    {% if o_region.grouper == name %}
-		                <ol>
-			                {% for item in o_region.list %}
-			                  <li><a href="#">
-			                  {{ item.content_type|capfirst }} ->  {{ item.get_view.verbose_name|capfirst }} {% if item.content_object %} -> {{ item.content_object }}{% endif %}
-			                  </a></li>
-			                {% endfor %}
-		                </ol>
-		            {% endif %}
-	            {% endfor %}
+                <li>
+                    <h3>
+                        <span>{{region.name}}</span>
+                        <a href="#" title="{% trans 'Add' %}"><img src="{{CYCLOPE_MEDIA_URL}}/images/add-small.png"/></a>
+                    </h3>
+                    {% for o_region in region_list %}
+                        {% if o_region.grouper == name %}
+		                    <ol>
+			                    {% for item in o_region.list %}
+			                      <li>
+			                          <a href="#" title="{% trans 'Edit' %}">
+			                          {{ item.content_type|capfirst }} ->  {{ item.get_view.verbose_name|capfirst }} {% if item.content_object %} -> {{ item.content_object }}{% endif %}
+			                          </a>
+			                          &nbsp;--&nbsp;
+			                          <a href="#" title="{% trans 'Delete' %}" onclick="alert('¿Segurísimo??')"><img src="{{CYCLOPE_MEDIA_URL}}/images/codigo_sur-ext-link.png"/></a>
+		                          </li>
+			                    {% endfor %}
+		                    </ol>
+		                {% endif %}
+	                {% endfor %}
+	            </li>
             {% endfor %}
         </ul>
     </div>
