delete icon & styles

--- a/cyclope/media/css/admin_tools_theming.css
+++ b/cyclope/media/css/admin_tools_theming.css
@@ -898,3 +898,9 @@ cursor: pointer;
 .regions_layout ol li {
     list-style-type: decimal;
 }
+
+.regions_layout a {
+    font-size: 14px;
+    vertical-align: top;
+    text-decoration: underline;
+}
