--- a/cyclope/templates/admin/cyclope/layout/change_form.html
+++ b/cyclope/templates/admin/cyclope/layout/change_form.html
@@ -17,18 +17,18 @@
                 <li>
                     <h3>
                         <span>{{region.name}}</span>
-                        <a href="#" title="{% trans 'Add' %}"><img src="{{CYCLOPE_MEDIA_URL}}/images/add-small.png"/></a>
+                        <a href="#" title="{% trans 'Add' %}" class="add_view_to_region" data-region="{{name}}"><img src="{{CYCLOPE_MEDIA_URL}}/images/add-small.png"/></a>
                     </h3>
                     {% for o_region in region_list %}
                         {% if o_region.grouper == name %}
 		                    <ol>
-			                    {% for item in o_region.list %}
+			                    {% for regionview in o_region.list %}
 			                      <li>
-			                          <a href="#" title="{% trans 'Edit' %}">
-			                          {{ item.content_type|capfirst }} ->  {{ item.get_view.verbose_name|capfirst }} {% if item.content_object %} -> {{ item.content_object }}{% endif %}
+			                          <a href="#" title="{% trans 'Edit' %}" class="edit_region_view" id="edit-region-view-{{regionview.pk}}" data-regionview="{{regionview.pk}}">
+			                          {{ regionview.content_type|capfirst }} ->  {{ regionview.get_view.verbose_name|capfirst }} {% if regionview.content_object %} -> {{ regionview.content_object }}{% endif %}
 			                          </a>
 			                          &nbsp;--&nbsp;
-			                          <a href="#" title="{% trans 'Delete' %}" onclick="alert('¿Segurísimo??')"><img src="{{CYCLOPE_MEDIA_URL}}/images/delete.png"/></a>
+			                          <a href="#" title="{% trans 'Delete' %}"><img src="{{CYCLOPE_MEDIA_URL}}/images/delete.png"/></a>
 		                          </li>
 			                    {% endfor %}
 		                    </ol>
@@ -93,6 +93,48 @@
       
       $('#id_template').trigger('change');
 
+        /**
+        *** NEW REGIONVIEW SINGLE REGION INLINE jQUERY
+        **  TODO find a better place
+        */
+        function regionviews_hide_all(){
+            $('.dynamic-regionview_set').hide();
+        }
+        function jump_bottom(){
+            $("html, body").animate({ scrollTop: $(document).height() }, "slow");
+        }
+        /*
+        //hide all fieldsets
+        regionviews_hide_all();
+        
+        //for all region view links
+        $('.edit_region_view').each(function(){
+            //on click select their region fieldset
+            $(this).click(function(){
+                regionview_id = $(this).attr('data-regionview');
+                regionviews_hide_all();
+                regionview = $("input[id^='id_regionview_set-'][id$='-id'][value="+regionview_id+"]").parent()
+                regionview.show();
+                jump_bottom();
+            });
+        });
+        
+        //for add to region + img links
+        $('.add_view_to_region').each(function(){
+            $(this).click(function(){
+                regionviews_hide_all();
+                region = $(this).attr('data-region');
+                //$("#regionview_set-empty").show();
+                last_region_id = $("select[id^='id_regionview_set-'][id$='-region']").length - 2
+                setup_chainedSelect_for_layout(last_region_id, false);
+                $('select[id="id_regionview_set-'+last_region_id+'-region"]').val(region);
+                $('#regionview_set-'+last_region_id).show();
+                jump_bottom();
+            });
+        });
+        */
+        // ***
+        // END REGIONVIEW jQUERY
 
       // View options
 
