--- a/cyclope/templates/admin/cyclope/layout/change_form.html
+++ b/cyclope/templates/admin/cyclope/layout/change_form.html
@@ -1,60 +1,58 @@
 {% extends "admin/change_form.html" %}
 {% load i18n layout cyclope_utils %}
 
-{% block after_related_objects %}
-{{ block.super }}
-
-{# CYCLOPE: Tree structure of regions #}
-{% regroup original.regionview_set.all|dictsort:"region" by region as region_list %}
-
-<div id="regions_tree" style="display:none;">
-
-    <div class="img_layout"><img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/layouts/{{original.image_path}}"/></div>
-
-    <div class="regions_layout">
-        <ul>
-            {% for name, region in layout_regions %}
-                <li>
-                    <h3>
-                        <span>{{region.name}}</span>
-                        <a href="#" title="{% trans 'Add' %}" class="add_view_to_region" data-region="{{name}}"><img src="{{CYCLOPE_MEDIA_URL}}images/add-small.png"/></a>
-                    </h3>
-                    {% for o_region in region_list %}
-                        {% if o_region.grouper == name %}
-		                    <ol class="regionview">
-			                    {% for regionview in o_region.list %}
-			                      <li>
-			                          <a href="#" title="{% trans 'Edit' %}" class="edit_region_view" id="edit-region-view-{{regionview.pk}}" data-regionview="{{regionview.pk}}">
-			                          {{ regionview.content_type|capfirst }} ->  {{ regionview.get_view.verbose_name|capfirst }} {% if regionview.content_object %} -> {{ regionview.content_object }}{% endif %}
-			                          </a>
-			                          &nbsp;--&nbsp;
-			                          <a href="{% url delete_regionview regionview.pk %}" title="{% trans 'Delete' %}" onclick="confirm('{%trans 'Do you really want to delete this region view?'%}');">
-			                            <img src="{{CYCLOPE_MEDIA_URL}}images/delete.png"/>
-		                              </a>
-		                          </li>
-			                    {% endfor %}
-		                    </ol>
-		                {% endif %}
-	                {% endfor %}
-	            </li>
-            {% endfor %}
-        </ul>
-    </div>
-</div>
-
-<!--TODO extra block-->
-<script type="text/javascript">
-//<![CDATA[
-    var cyclope_prefix = "{{CYCLOPE_PREFIX}}";
-    var layout_data = {% layout_regions_data %};
-//]]>
-</script>
-<script type="text/javascript" src="{{CYCLOPE_MEDIA_URL}}js/layouts.js"></script>
-
-{% endblock %}
-
 {% block extrahead %}
     {{ block.super }}
+    <script type="text/javascript">
+    //<![CDATA[
+        var cyclope_prefix = "{{CYCLOPE_PREFIX}}";
+        var layout_data = {% layout_regions_data %};
+    //]]>
+    </script>
+    <script type="text/javascript" src="{{CYCLOPE_MEDIA_URL}}js/layouts.js"></script>
+    <!-- sortable regionviews -->
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery-ui-1.8.4.custom.min.js"></script> <!--TODO v.11-->
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/drag_drop.js"></script>
+{% endblock %}
+
+{% block after_related_objects %}
+    {{ block.super }}
+
+    {# CYCLOPE: Tree structure of regions #}
+    {% regroup original.regionview_set.all|dictsort:"region" by region as region_list %}
+
+    <div id="regions_tree" style="display:none;">
+
+        <div class="img_layout"><img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/layouts/{{original.image_path}}"/></div>
+
+        <div class="regions_layout">
+            <ul>
+                {% for name, region in layout_regions %}
+                    <li>
+                        <h3>
+                            <span>{{region.name}}</span>
+                            <a href="#" title="{% trans 'Add' %}" class="add_view_to_region" data-region="{{name}}"><img src="{{CYCLOPE_MEDIA_URL}}images/add-small.png"/></a>
+                        </h3>
+                        {% for o_region in region_list %}
+                            {% if o_region.grouper == name %}
+		                        <ol class="regionview">
+			                        {% for regionview in o_region.list %}
+			                          <li>
+			                              <a href="#" title="{% trans 'Edit' %}" class="edit_region_view" id="edit-region-view-{{regionview.pk}}" data-regionview="{{regionview.pk}}">
+			                              {{ regionview.content_type|capfirst }} ->  {{ regionview.get_view.verbose_name|capfirst }} {% if regionview.content_object %} -> {{ regionview.content_object }}{% endif %}
+			                              </a>
+			                              &nbsp;--&nbsp;
+			                              <a href="{% url delete_regionview regionview.pk %}" title="{% trans 'Delete' %}" onclick="confirm('{%trans 'Do you really want to delete this region view?'%}');">
+			                                <img src="{{CYCLOPE_MEDIA_URL}}images/delete.png"/>
+		                                  </a>
+		                              </li>
+			                        {% endfor %}
+		                        </ol>
+		                    {% endif %}
+	                    {% endfor %}
+	                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
 {% endblock %}
