--- a/cyclope/templates/admin/cyclope/layout/change_form.html
+++ b/cyclope/templates/admin/cyclope/layout/change_form.html
@@ -11,7 +11,7 @@
     </script>
     <script type="text/javascript" src="{{CYCLOPE_MEDIA_URL}}js/layouts.js"></script>
     <!-- sortable regionviews -->
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery-ui-1.8.4.custom.min.js"></script> <!--TODO v.11-->
+    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery-ui-1.8.4.custom.min.js"></script> {# TODO v.11 #}
 {% endblock %}
 
 {% block after_related_objects %}
@@ -41,8 +41,8 @@
 			                              {{ regionview.content_type|capfirst }} ->  {{ regionview.get_view.verbose_name|capfirst }} {% if regionview.content_object %} -> {{ regionview.content_object }}{% endif %}
 			                              </a>
 			                              &nbsp;--&nbsp;
-			                              <a href="{% url delete_regionview regionview.pk %}" title="{% trans 'Delete' %}" onclick="confirm('{%trans 'Do you really want to delete this region view?'%}');">
-			                                <img src="{{CYCLOPE_MEDIA_URL}}images/delete.png"/>
+			                              <a href="{% url delete_regionview regionview.pk %}" title="{% trans 'Delete' %}" onclick="return confirm('{%trans 'Delete this region view?'%}');">
+			                                <img src="{{CYCLOPE_MEDIA_URL}}images/delete.png" height="10px;"/>
 		                                  </a>
 		                              </li>
 			                        {% endfor %}
