--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/footer.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/footer.html
@@ -2,8 +2,8 @@
 
 <footer>
     {% block page_footer %}
-    <hr />
-        <div class="footer">
+        <div class="footer container">
+          <hr/>
             {% region 'footer' %}
             <span id="creativecommons">Los contenidos de este sitio web están bajo una
             <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.es_CO">
@@ -14,4 +14,3 @@
         </div><!-- /end mask -->
     {% endblock %}
 </footer>
-
