ugly fix for broken jquery in article's admin because of reuse_django_jquery redefining $ see rev.1435 got to fix the whole jquery versions mess

--- a/cyclope/templates/admin/base_site.html
+++ b/cyclope/templates/admin/base_site.html
@@ -9,4 +9,4 @@
 
 {% block nav-global %}{% endblock %}
 
-{% block footer %} <div id="footer">Desarrollado por <a href="http://www.codigosur.org" target="_blank">Código Sur</a></div> {% endblock %}
+{% block footer %} <div id="footer">Desarrollado por <a href="https://www.codigosur.org" target="_blank">Código Sur</a></div> {% endblock %}
