Unified jQuery versions to latest in jQuery's branch 1.9+, which still supports IE8 jQuery paths are defined as a Cyclope setting so it can later be easily updated application-wide removed older versions altogether

--- a/cyclope/apps/articles/templates/admin/articles/article/change_form.html
+++ b/cyclope/apps/articles/templates/admin/articles/article/change_form.html
@@ -5,7 +5,7 @@
     {{ media }}
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery.chainedSelect.js"></script>
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/less.min.js"></script>
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery-ui-1.11.4-min.js"></script>
+    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}{{ CYCLOPE_JQUERY_UI_PATH }}"></script>
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/cyclope_media_widget.js"></script>
 {% endblock %}
 {% block content %}
