--- a/cyclope/apps/dynamicforms/templates/admin/forms/change_form.html
+++ b/cyclope/apps/dynamicforms/templates/admin/forms/change_form.html
@@ -23,6 +23,6 @@
 
 {% block extrahead %}
     {{ block.super }}
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery-ui-1.8.4.custom.min.js"></script>
+    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}{{ CYCLOPE_JQUERY_UI_PATH }}"></script>
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/drag_drop.js"></script>
 {% endblock %}
