--- a/cyclope/templates/admin/cyclope/layout/change_form.html
+++ b/cyclope/templates/admin/cyclope/layout/change_form.html
@@ -10,7 +10,7 @@
         var layout_data = {% layout_regions_data %};
     //]]>
     </script>
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery-ui-1.11.4-min.js"></script>
+    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}{{ CYCLOPE_JQUERY_UI_PATH }}"></script>
     <script type="text/javascript" src="{{CYCLOPE_MEDIA_URL}}js/layouts.js"></script>
 {% endblock %}
 
