--- a/cyclope/apps/media_widget/templates/media_widget/media_widget.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_widget.html
@@ -3,8 +3,7 @@
     <!--styles-->
     <link href="{{CYCLOPE_STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
     <!--scripts-->
-    <script type="text/javascript" src="{{CYCLOPE_STATIC_URL}}js/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="{{CYCLOPE_STATIC_URL}}js/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="{{CYCLOPE_STATIC_URL}}{{ CYCLOPE_JQUERY_PATH }}"></script>
     <script type="text/javascript" src="{{CYCLOPE_STATIC_URL}}js/bootstrap/bootstrap.min.js"></script>
     <!-- TODO move scripts inside app -->
     <script type="text/javascript">
