--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
@@ -46,9 +46,8 @@
     {% endblock displaycss %}
     {% endcompress %}
     <!-- /CSS -->
-     
     <!--jquery needs to be here to work properly clear search box --> 
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}{{ CYCLOPE_JQUERY_PATH }}"></script>
      
     {% block extra_head %}{% endblock %}
 
